<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:activity="com.konel.kryptapps.rapidodemo.MainActivity">

    <Button
        android:id="@+id/btnCTA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/cta_button_background_color"
        android:text="@string/main_screen_cta_text"
        android:textColor="@color/cta_button_text_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnCTA"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:textSize="14sp"
                tools:text="Source" />

            <Button
                android:id="@+id/btnSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_screen_source_button_text"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/textPrimary"
                android:textSize="14sp"
                tools:text="Destination" />

            <Button
                android:id="@+id/btnDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_screen_destination_button_text"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/textPrimary"
                android:textSize="14sp"
                tools:text="current location" />

            <Button
                android:id="@+id/btnCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_screen_current_location_button_text"
                android:textColor="@color/textPrimary"
                android:textSize="12sp" />


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
