<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/screen_padding">

    <TextView
        android:id="@+id/tvBottomSheetRouteItemDistanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/screen_padding"
        android:text="@string/distance"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_heading2_size" />

    <TextView
        android:id="@+id/tvBottomSheetRouteItemDistanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvBottomSheetRouteItemDistanceLabel"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_toEndOf="@id/tvBottomSheetRouteItemDistanceLabel"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/text_body_size"
        tools:text="0.1 Km" />

    <TextView
        android:id="@+id/tvBottomSheetRouteItemDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBottomSheetRouteItemDistanceLabel"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="8dp"
        android:text="@string/duration"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_heading2_size" />

    <TextView
        android:id="@+id/tvBottomSheetRouteItemDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvBottomSheetRouteItemDurationLabel"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_toEndOf="@id/tvBottomSheetRouteItemDurationLabel"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/text_body_size"
        tools:text="1 min" />

    <TextView
        android:id="@+id/tvBottomSheetRouteItemInstructionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBottomSheetRouteItemDurationLabel"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="8dp"
        android:text="@string/instruction"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_heading2_size" />

    <TextView
        android:id="@+id/tvBottomSheetRouteItemInstructionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvBottomSheetRouteItemInstructionLabel"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_toEndOf="@id/tvBottomSheetRouteItemInstructionLabel"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/text_body_size"
        tools:text="Head northeast" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tvBottomSheetRouteItemInstructionText"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider" />


</RelativeLayout>