<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    tools:context="com.konel.kryptapps.rapidodemo.screens.queryScreen.QueryActivity">

    <Button
        android:id="@+id/query_screen_cta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_primary_button"
        android:text="@string/query_screen_cta"
        android:textColor="@color/cta_button_text_color" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/query_screen_cta"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSourceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_heading1_size"
                tools:text="Quest Mall" />

            <TextView
                android:id="@+id/tvSourceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_body_size"
                tools:text="20B Dilkhusa Street, Circus Avenue, Kolkata 700017, West Bengal, India" />

            <Button
                android:id="@+id/btnSourceDetection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_secondary_button"
                android:text="@string/main_screen_source_button_text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/tvDestinationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/text_heading1_size"
                tools:text="Essel Tower" />

            <TextView
                android:id="@+id/tvDestinationAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_body_size"
                tools:text="20B Dilkhusa Street, Circus Avenue, Kolkata 700017, West Bengal, India" />

            <Button
                android:id="@+id/btnDestinationDetection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_secondary_button"
                android:text="@string/main_screen_source_button_text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/button_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/tvCurrentLocationLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/query_screen_current_location_label_text"
                android:textColor="@color/textSecondary"
                android:textSize="@dimen/text_body_size" />

            <Button
                android:id="@+id/btnDetectLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/background_secondary_button"
                android:text="@string/query_screen_detect_location_button_text"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
